# sloptimize

./: .env.example  API_README.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
deploy/: README.md
deploy/nginx/: api.sloptimize.ai  mcp.sloptimize.ai  sloptimize.ai
deploy/scripts/: run_mcp_http_server.py  run_worker_daemon.py
deploy/systemd/: sloptimize-api.service  sloptimize-mcp.service  sloptimize-worker.service
scripts/: test_api.py
src/sloptimize/: PROMPT.md  __init__.py  database.py  environment.py  llm.py  main.py  utils.py
src/sloptimize/api/: README.md  __init__.py  __main__.py  main.py
src/sloptimize/server/: README.md  __init__.py
src/sloptimize/worker/: README.md  __init__.py  daemon.py  main.py
tests/: test_sloptimize.py
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.tsx
ui/src/components/: Banner.tsx  CodeExampleSection.tsx  CommandBox.tsx  CursorConfigSection.tsx  FeaturesSection.tsx  Footer.tsx  InstallationSection.tsx  ProblemSection.tsx  Section.tsx  UsageSection.tsx
ui/src/styles/: GlobalStyles.ts
